dfir_rs/tests/compile-fail/surface_demuxenum_wrongtype.stderr
error[E0277]: the trait bound `impl dfir_rs::dfir_pipes::push::Push<Shape, (), CanPend = <impl dfir_rs::dfir_pipes::push::Push<Shape, ()> as dfir_rs::dfir_pipes::push::Push<Shape, ()>>::CanPend>: dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:41
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ---------------------^^^^^^^^^^^^^^^^^^^^^
   |                    |                    |
   |                    |                    unsatisfied trait bound
   |                    required by a bound introduced by this call
   |
   = help: the trait `dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not implemented for `impl dfir_rs::dfir_pipes::push::Push<Shape, (), CanPend = <impl dfir_rs::dfir_pipes::push::Push<Shape, ()> as dfir_rs::dfir_pipes::push::Push<Shape, ()>>::CanPend>`
   = help: the following other types implement trait `dfir_rs::dfir_pipes::push::Push<Item, Meta>`:
             `&mut P` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `DemuxEnum<Outputs>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `ResolveFutures<Psh, Queue, QueueInner>` implements `dfir_rs::dfir_pipes::push::Push<Fut, ()>`
             `SinkPush<Si>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::DemuxVar<Pushes>` implements `dfir_rs::dfir_pipes::push::Push<(usize, Item), Meta>`
             `dfir_rs::dfir_pipes::push::Fanout<P0, P1>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::Filter<Next, Func>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::FilterMap<Next, Func>` implements `dfir_rs::dfir_pipes::push::Push<In, Meta>`
           and $N others
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:20
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`

error[E0277]: the trait bound `impl dfir_rs::dfir_pipes::push::Push<Shape, (), CanPend = <impl dfir_rs::dfir_pipes::push::Push<Shape, ()> as dfir_rs::dfir_pipes::push::Push<Shape, ()>>::CanPend>: dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not satisfied
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:20
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not implemented for `impl dfir_rs::dfir_pipes::push::Push<Shape, (), CanPend = <impl dfir_rs::dfir_pipes::push::Push<Shape, ()> as dfir_rs::dfir_pipes::push::Push<Shape, ()>>::CanPend>`
   = help: the following other types implement trait `dfir_rs::dfir_pipes::push::Push<Item, Meta>`:
             `&mut P` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `DemuxEnum<Outputs>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `ResolveFutures<Psh, Queue, QueueInner>` implements `dfir_rs::dfir_pipes::push::Push<Fut, ()>`
             `SinkPush<Si>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::DemuxVar<Pushes>` implements `dfir_rs::dfir_pipes::push::Push<(usize, Item), Meta>`
             `dfir_rs::dfir_pipes::push::Fanout<P0, P1>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::Filter<Next, Func>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
             `dfir_rs::dfir_pipes::push::FilterMap<Next, Func>` implements `dfir_rs::dfir_pipes::push::Push<In, Meta>`
           and $N others
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:20
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`
